--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                  </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a)! Faça o login.</p>
+                <p>Seja bem-vindo(a) ! <br> Faça o login.</p>
                 <form action="login.php" method="post">
 
                     
