--- a/index.html
+++ b/index.html
@@ -1,26 +1,47 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=lock" />
 </head>
+
 <body>
     <main>
         <section id="login">
             <div id="imagem">
-                 </div>
+            </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) ! <br> Faça o login.</p>
                 <form action="login.php" method="post">
 
-                    
+                    <div class="campos">
+                        <span class="material-symbols-outlined">
+                            lock
+                        </span>
+                        <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email">
+                        <label for="iemail">Login</label>
+
+                        
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha"
+                            autocomplete="current-password">
+                            <label for="isenha">Senha</label>
+
+                    </div>
+
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.php">Esqueci minha senha</a>
+
                 </form>
-                 </div>
+            </div>
         </section>
     </main>
 </body>
+
 </html>
