--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=lock" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=lock,login" />
 </head>
 
 <body>
@@ -18,24 +18,29 @@
             </div>
             <div id="formulario">
                 <h1>Login</h1>
-                <p>Seja bem-vindo(a) ! <br> Faça o login.</p>
+                <p>Seja bem-vindo(a) novamente. Faça login para acessar a sua conta e poder fazer as configurações no seu ambiente!</p>
                 <form action="login.php" method="post">
 
                     <div class="campos">
                         <span class="material-symbols-outlined">
+                            login
+                            </span>
+                        <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email" required maxlength="50">
+                        <label for="iemail">Login</label>
+                            </div>
+
+                            <div class="campos">
+                        <span class="material-symbols-outlined">
                             lock
                         </span>
-                        <input type="email" name="email" id="iemail" placeholder="seu e-mail" autocomplete="email">
-                        <label for="iemail">Login</label>
-
-                        
                         <input type="password" name="senha" id="isenha" placeholder="sua senha"
-                            autocomplete="current-password">
+                            autocomplete="current-password" required minlength="8" maxlength="20">
                             <label for="isenha">Senha</label>
 
                     </div>
 
                     <input type="submit" value="Entrar">
+
                     <a href="esqueci.php">Esqueci minha senha</a>
 
                 </form>
